<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/ivProduct"
                android:layout_width="100dp"
                android:layout_height="100dp"
                style="@style/CircularImage"
                android:layout_marginTop="30dp"
                android:src="@drawable/ic_no_image"/>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputLayout"
                android:layout_width="match_parent"
                android:layout_marginTop="20dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etProductName"
                    style="@style/LoginTextInputEditText"
                    android:hint="@string/product_name"
                    android:singleLine="false" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginTop="20dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etProductDescription"
                    style="@style/LoginTextInputEditText"
                    android:layout_height="match_parent"
                    android:gravity="top"
                    android:hint="@string/product_description"
                    android:singleLine="false" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputLayout"
                android:layout_width="match_parent"
                android:layout_marginTop="20dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etProductPrice"
                    style="@style/LoginTextInputEditText"
                    android:hint="@string/product_price"
                    android:inputType="numberDecimal"
                    android:singleLine="false" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputLayout"
                android:layout_width="match_parent"
                android:layout_marginTop="20dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etProductDiscount"
                    style="@style/LoginTextInputEditText"
                    android:hint="@string/product_discount_percentage"
                    android:inputType="numberDecimal"
                    android:singleLine="false" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputLayout"
                android:layout_width="match_parent"
                android:layout_marginTop="20dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etProductRating"
                    style="@style/LoginTextInputEditText"
                    android:hint="@string/product_rating"
                    android:inputType="numberDecimal"
                    android:singleLine="false" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputLayout"
                android:layout_width="match_parent"
                android:layout_marginTop="20dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etProductStock"
                    style="@style/LoginTextInputEditText"
                    android:hint="@string/product_stock"
                    android:inputType="number"
                    android:singleLine="false" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputLayout"
                android:layout_width="match_parent"
                android:layout_marginTop="20dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etProductBrand"
                    style="@style/LoginTextInputEditText"
                    android:hint="@string/product_brand"
                    android:singleLine="false" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputLayout"
                android:layout_width="match_parent"
                android:layout_marginTop="20dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etProductCategory"
                    style="@style/LoginTextInputEditText"
                    android:hint="@string/product_category"
                    android:singleLine="false" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnAddProduct"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginBottom="30dp"
                android:text="@string/add_product"/>

        </androidx.appcompat.widget.LinearLayoutCompat>
    </ScrollView>



</androidx.appcompat.widget.LinearLayoutCompat>