<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:gravity="center"
    android:orientation="vertical">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        app:cardCornerRadius="19dp"
        app:strokeColor="@color/black"
        app:strokeWidth="2dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingVertical="30dp">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold|italic" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputLayout"
                android:layout_width="match_parent"
                android:layout_marginTop="20dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etUsername"
                    style="@style/LoginTextInputEditText"
                    android:hint="@string/user"
                    android:inputType="textEmailAddress"
                    android:singleLine="false" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputLayout"
                android:layout_width="match_parent"
                android:layout_marginTop="15dp"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPassword"
                    style="@style/LoginTextInputEditText"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:singleLine="false" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/cbRemember"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:text="@string/remember_me" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/log_in"
                android:textStyle="bold" />

        </androidx.appcompat.widget.LinearLayoutCompat>
    </com.google.android.material.card.MaterialCardView>
</LinearLayout>